added very big data tests

--- a/GraphQLvsgRPC/GraphQL/package.json
+++ b/GraphQLvsgRPC/GraphQL/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node query.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
