--- a/GraphQLvsgRPC/GraphQL/package.json
+++ b/GraphQLvsgRPC/GraphQL/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.1.0",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "request": "^2.88.0"
   }
 }
